src/scss/main/spotify.sass
.cont-spot
  margin-top: get-vw(180px)
  margin: 0 auto
  display: flex
  align-items: center
  justify-content: space-between
  &__body
    &-header
      margin-bottom: get-vw(40px)
      & h2
        width: 80%
        font-weight: 600
        font-size: get-vw(34px)
        line-height: 1.3
        letter-spacing: get-vw(0.25px)
        color: $titleText
        margin-bottom: get-vw(15px)
      & p
        font-weight: 400
        font-size: get-vw(17px)
        line-height: 1.4
        letter-spacing: get-vw(0.3px)
        color: $descriptionText
    &-item
      display: flex
      align-items: center
      opacity: 0
      transform: translateX(80%)
      transition: .8s cubic-bezier(.19,.92,.45,.98)
      &:not(:last-child)
        margin-bottom: get-vw(20px)
      &:nth-of-type(2n)
        padding-inline-start: get-vw(53px)
      & span
        font-weight: 400
        color: $titleText
        font-size: get-vw(28px)
        line-height: 1.3
        width: get-vw(53px)
        height: get-vw(53px)
        display: flex
        align-items: center
        justify-content: center
        border-radius: 50%
        border: 1px solid $accentColor
      & p
        margin-left: get-vw(26px)
        font-weight: 700
        font-size: get-vw(17px)
        line-height: 1.4
        letter-spacing: get-vw(0.44px)
        color: $titleText
      &:nth-child(3) p
        width: 60%
      &:nth-child(1)
        transition-delay: .6s
      &:nth-child(2)
        transition-delay: 1.2s
      &:nth-child(3)
        transition-delay: 1.8s
      &:nth-child(4)
        transition-delay: 2.4s
  &__item
    width: 50%
  &__review
    position: relative
    text-align: center
    &-decor
      position: absolute
      top: get-vw(48px)
      left: 0
      width: get-vw(214px)
      height: get-vw(226px)
      z-index: 1
      display: block
      opacity: 0
      transition: .6s linear
      transition-delay: 1.1s
      & span
        display: block
        width: 100%
        height: 58.5%
        background: transparent
        position: relative
        z-index: 1
        &:first-child
          border: get-vw(10px) solid $accentColor
          border-bottom: none
          &::before,&::after
            content: ''
            width: 100%
            height: 100%
            position: absolute
            bottom: 0
            right: 0
            transition: 1.6s ease-in-out
            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, .1)
          &::after
            box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, .1)
        &:last-child
          border: get-vw(10px) solid $lightTextTwo
          border-top: none
          height: 41.5%
          background: transparent
    &-img
      & img
        width: get-vw(307px)
        height: get-vw(468px)
        z-index: 1
        position: relative
        transform: translate(-2%, 100%)
        opacity: 0
        transition: 1s ease-in-out
        // display: block
        // margin: 0 auto
        background: radial-gradient(108.54% 107.43% at 0% 0%, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%)
        backdrop-filter: blur(11px)
        box-shadow: 0px get-vw(4px) get-vw(15px) rgba(0, 0, 0, 0.07)
    &::after
      content: ''
      position: absolute
      bottom: -10%
      right: 15%
      width: get-vw(640px)
      height: get-vw(328px)
      background: linear-gradient(130.16deg, #82BB58 2.89%, #53A580 97.29%)
      box-shadow: get-vw(8px) get-vw(10px) get-vw(15px) rgba(0, 0, 0, 0.11)
    &::before
      content: ''
      position: absolute
      top: 30%
      right: 7%
      width: get-vw(111px)
      height: get-vw(100px)
      background: url(../img/sys/decor_spot.png) 50% 50%/100% 100% no-repeat

.cont-spot.active
  & .cont-spot__body-item
    opacity: 1
    transform: translateX(0)
  & .cont-spot__review-img img
    transform: translate(-2%,0)
    opacity: 1
  & .cont-spot__review-decor
    opacity: 1

